--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 
 body {
     font-family: "Blinker", sans-serif;
-  
+
 }
 
 .shadowBox {
@@ -21,3 +21,8 @@ body {
     background-size: cover;
     
 }
+::-webkit-scrollbar {
+    width: 0px;
+  }
+  
+  
